# LinearAlgebra_VTA

./: .gitignore  Exam reader.ipynb  Intrinsic Evaluation Gemini.ipynb  Intrinsic Evaluation LearnLM.ipynb  Intrinsic Evaluation.ipynb  Pedagogical Analysis - LearnLM.ipynb  README.md  Report Generation - OpenAI.ipynb  Scratch paper notebook.ipynb  VTA.py  Vector Similarity.ipynb  Visualizations User Criteria.ipynb  app10.py  app2.py  app4.py  app5.py  app6.py  app7.py  app8.py  app9A.py  concrete_suggestions.pkl  overall_recommendations.pkl  pyproject.toml  recommendations_per_file.pkl  recommendations_per_question.pkl  scratch o4-mini code.ipynb  text_reader.py
chats/: data 2025-06-10 23_30_00.pkl  data 2025-06-11 01_17_53.pkl  data 2025-06-11 06_49_17.pkl  data 2025-06-11 06_49_35.pkl  data 2025-06-11 06_53_14.pkl  data 2025-06-11 06_54_39.pkl  data 2025-06-11 06_56_12.pkl
embeddings/: EmbeddingsGenerator Gemini.ipynb  EmbeddingsGenerator.ipynb  README.md  pyproject.toml  section_names.json  topics.json
fonts/: DejaVuSans-BoldOblique.pkl
pedagogical-aspects/: Pedagogical Analysis - Gemini.ipynb  Pedagogical Analysis - OpenAI.ipynb
prior-versions/: app4.py  app5.py  app6.py  app8.py  app8A.py  app8B.py
results/: Intrinsic Evaluation LearnLM.ipynb  Intrinsic Evaluation o4-mini + CODE.ipynb  Intrinsic Evaluation o4-mini.ipynb  Vector Similarity.ipynb  baseline_GPT3_5_RAG_Construction.pkl  baseline_GPT3_5_RAG_TF.pkl  baseline_GPT3_5_TF.pkl
user-testing/: Conversations.txt  Saving output for user testing.ipynb  Time upgrader.ipynb  Visualisations Survey.ipynb  (+3 more)
(+140 files in other folders)
