[project]
name = "linearalgebra-vta"
version = "0.1.0"
description = "See README.md"
authors = [
    {name = "m.elands@student.maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
