[project]
name = "linearalebra-tva-dev"
version = "0.1.0"
description = "See README.md"
authors = [
    {name = "m.elands@student.maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-core (>=0.3.59,<0.4.0)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "asttokens (>=3.0.0,<4.0.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)"
]
#"asttokens (>=3.0.0,<4.0.0)", in previous file before the merge.



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
